OO-6734: import several teachers, external id. in lecture list of course